<resources>
    <string name="app_name">Notre jardin</string>
    <string name="sous_titre">Mais pas le vôtre...</string>
    <string name="_switch">Souitche</string>
    <string name="degage">Toute ça, c\'est pas de tes affaires!</string>
    <string name="temperature">Température dans notre communauté :</string>
    <string name="humidity">Humidité de l\'air de notre communauté :</string>
    <string name="plantes">Nos plantes sont </string>
    <string name="seche">sèches !</string>
    <string name="mouille">humides !</string>
    <string name="red_alert">Alerte rouge! Mouvement détecté!</string>
    <string name="no_alert">Tout est calme par ici...</string>
    <string name="son_on">Démarrer la musique!</string>
    <string name="son_off">Couper la musique !</string>
</resources>