<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBienvenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/foreground"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tvSousTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner"
        android:gravity="center"
        android:text="@string/sous_titre"
        android:textColor="@color/foreground" />

    <Switch
        android:id="@+id/swLangue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:switchMinWidth="50dp"
        android:switchPadding="5dp"
        android:text="@string/_switch"
        android:textColor="@color/foreground"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvDegage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner"
        android:gravity="center"
        android:text="@string/degage"
        android:textColor="@color/foreground"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/llHeure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/accent1"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/tvTitreHeure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:text="@string/heure"
            android:textColor="@color/accent2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHeure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:textColor="@color/accent2"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/accent1"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/tvTitreTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/temperature"
            android:textColor="@color/accent2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:textColor="@color/accent2"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>